# my-test

./: README.md  io.github.josephmawa.Bella.json  io.github.josephmawa.bella.json  meson.build  org.mawa.mytest.json
data/: io.github.josephmawa.Bella.appdata.xml.in  io.github.josephmawa.Bella.desktop.in  io.github.josephmawa.Bella.gschema.xml  io.github.josephmawa.Bella.metainfo.xml.in  io.github.josephmawa.bella.appdata.xml.in  io.github.josephmawa.bella.desktop.in  io.github.josephmawa.bella.gschema.xml  meson.build  org.mawa.mytest.appdata.xml.in  org.mawa.mytest.desktop.in  org.mawa.mytest.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: alert-dialog.js  application.js  confirm-delete-all.js  confirm-delete-one.js  main.js  meson.build  my-test.data.gresource.xml  org.mawa.mytest.data.gresource.xml  org.mawa.mytest.src.gresource.xml  preferences.js  window.js  window.ui
src/gresources/: Bella.data.gresource.xml  bella.data.gresource.xml  io.github.josephmawa.Bella.data.gresource.xml  io.github.josephmawa.Bella.src.gresource.xml  io.github.josephmawa.bella.data.gresource.xml  io.github.josephmawa.bella.src.gresource.xml  my-test.data.gresource.xml  org.mawa.mytest.data.gresource.xml  org.mawa.mytest.src.gresource.xml
src/gtk/: actions-column.ui  color-list-view.ui  column-view.ui  name-column.ui
src/styles/: index.css
src/ui/: about-dialog.ui  alert-dialog.ui  confirm-delete-all.ui  confirm-delete-one.ui  created-at-column.ui  preferences.ui  window.ui
src/ui/color-format-table-columns/: actions.ui  color.ui  format.ui
src/ui/saved-color-table-columns/: actions.ui  color.ui
src/utils/: about-params.js  color-names.js  color.js  even-numbers.js  nearest-color.js  saved-color.js  tailwind-colors.js  utils.js
